--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -601,6 +601,75 @@
       "execution_count": null,
       "source": "unclean_df.reset_index(inplace=True)\nunclean_df.shape",
       "outputs": []
+    },
+    {
+      "id": "b1410c72-3f05-4a63-ae94-b208cddbfc03",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "14d249f3-96dc-4cd8-979b-22fa33c2b9f9"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:42:32.447062+00:00",
+          "start_time": "2023-07-18T20:42:32.103223+00:00"
+        },
+        "datalink": {
+          "b2ef382d-0457-4d28-a610-e94443bf5384": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 84352,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 84352,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "b2ef382d-0457-4d28-a610-e94443bf5384",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:42:32.260681",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -623,7 +692,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "69db2cad-ae74-4287-a105-bbc9c6ccf773"
+      "last_transaction_id": "7fad2a89-95f1-456f-92c7-6630ddda7f27"
     }
   },
   "nbformat": 4,
