--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -682,15 +682,85 @@
       }
     },
     {
+      "id": "973491de-01fa-4926-a8ec-d14d5c56e61f",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "88862f86-0a9f-49ae-b29f-b78b61f100e6"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:47:01.071388+00:00",
+          "start_time": "2023-07-18T20:47:00.913272+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Remove numbers from 'Company Name' column\nunclean_df['Company Name'] = unclean_df['Company Name'].str.replace('\\d+', '')",
+      "outputs": []
+    },
+    {
       "id": "318c8ad5-423d-4cbd-bf2c-e56aef7c3c29",
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "python"
+          "cell_type": "python",
+          "output_collection_id": "5ed21b47-14a5-4b5c-8222-816cd2e556ee"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:47:08.942188+00:00",
+          "start_time": "2023-07-18T20:47:08.614136+00:00"
+        },
+        "datalink": {
+          "32cb6683-81d0-41f8-85b4-8711506ea681": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 84352,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 84352,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "32cb6683-81d0-41f8-85b4-8711506ea681",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:47:08.750586",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "unclean_df",
       "outputs": []
     }
   ],
@@ -714,7 +784,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "a8ab571d-8720-4f0b-95cf-e1a68c39db11"
+      "last_transaction_id": "6c068308-063f-4c8a-9e03-7221e4d6047d"
     }
   },
   "nbformat": 4,
