--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "e57414e7-12e0-4907-b27a-9ebc98e2b4f6"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:17:46.654103+00:00",
-          "start_time": "2023-07-18T20:17:46.497993+00:00"
+          "end_time": "2023-07-18T20:49:14.187132+00:00",
+          "start_time": "2023-07-18T20:49:14.030380+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "f217b123-bc42-4a95-974d-7e3d50101060"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:17:51.421465+00:00",
-          "start_time": "2023-07-18T20:17:51.113049+00:00"
+          "end_time": "2023-07-18T20:49:16.869823+00:00",
+          "start_time": "2023-07-18T20:49:16.571278+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -171,6 +171,52 @@
             "sampling_time": "2023-07-18T20:17:51.259585",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f1057371e1d64c2c954127619176ebc3"
+          },
+          "81c40468-a477-40f2-a2fb-8cbcb6db15b5": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "81c40468-a477-40f2-a2fb-8cbcb6db15b5",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:49:16.710985",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_21b02fd6a7f74f29a0f7dca4efd22c02"
           }
         },
         "dx": {
@@ -190,11 +236,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "4fd4f444-079e-4498-94de-fc794e598420"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:18:08.076857+00:00",
-          "start_time": "2023-07-18T20:18:07.872888+00:00"
+          "end_time": "2023-07-18T20:49:21.474893+00:00",
+          "start_time": "2023-07-18T20:49:21.277016+00:00"
         }
       },
       "execution_count": null,
@@ -211,11 +257,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "e6de4480-0dbf-42f1-8c3b-3308de140d1e"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:18:11.745110+00:00",
-          "start_time": "2023-07-18T20:18:11.554551+00:00"
+          "end_time": "2023-07-18T20:49:24.560161+00:00",
+          "start_time": "2023-07-18T20:49:24.367775+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -393,6 +439,50 @@
             "sampling_time": "2023-07-18T20:18:11.588395",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_b06f914d9c504d9485d965d7884806dd"
+          },
+          "21a069b5-20d2-4212-bb04-bd8ae02cef63": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "21a069b5-20d2-4212-bb04-bd8ae02cef63",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:49:24.403363",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_b3af0a158cad4fbbb8e7e1396b7c654c"
           }
         },
         "dx": {
@@ -417,11 +507,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "b23a1b2d-5093-49fc-8344-b05b7663593a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:18:15.509492+00:00",
-          "start_time": "2023-07-18T20:18:15.346726+00:00"
+          "end_time": "2023-07-18T20:49:27.859680+00:00",
+          "start_time": "2023-07-18T20:49:27.698364+00:00"
         }
       },
       "execution_count": null,
@@ -714,7 +804,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "699e35c6-f4e4-4365-8c66-ec7d82b60efd"
+      "last_transaction_id": "b9b9e1c8-a8e8-4bae-980e-3ec75ce37433"
     }
   },
   "nbformat": 4,
