--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -524,11 +524,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "addb2440-1adc-455c-a966-db54ee7fefc1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:19:13.222639+00:00",
-          "start_time": "2023-07-18T20:19:12.944627+00:00"
+          "end_time": "2023-07-18T20:49:31.908113+00:00",
+          "start_time": "2023-07-18T20:49:31.634570+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -622,6 +622,52 @@
             "sampling_time": "2023-07-18T20:19:13.058155",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_74bc472025094a04b18ca5229126b016"
+          },
+          "4c695686-b4ed-4ae0-9414-ebce7bd6e10d": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "4c695686-b4ed-4ae0-9414-ebce7bd6e10d",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:49:31.748384",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_d810cef9446d4975aa577fedea644a16"
           }
         }
       },
@@ -639,11 +685,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "ecf5b9c1-d949-4818-a42e-ea0f22bf25bf"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:41:38.480087+00:00",
-          "start_time": "2023-07-18T20:41:38.315206+00:00"
+          "end_time": "2023-07-18T20:49:35.254562+00:00",
+          "start_time": "2023-07-18T20:49:35.088273+00:00"
         }
       },
       "execution_count": null,
@@ -660,11 +706,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "fd5e2824-ae1b-4807-85ee-fbed45c5f38d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:41:59.646168+00:00",
-          "start_time": "2023-07-18T20:41:59.487295+00:00"
+          "end_time": "2023-07-18T20:49:38.657987+00:00",
+          "start_time": "2023-07-18T20:49:38.498035+00:00"
         }
       },
       "execution_count": null,
@@ -681,11 +727,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "346943c2-d488-4e3c-a2a4-a02c12bf6264"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:42:16.111847+00:00",
-          "start_time": "2023-07-18T20:42:15.951732+00:00"
+          "end_time": "2023-07-18T20:49:40.809766+00:00",
+          "start_time": "2023-07-18T20:49:40.650099+00:00"
         }
       },
       "execution_count": null,
@@ -702,11 +748,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "3ef1ba56-3663-4f20-a4e0-6b9daf5994c0"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:42:32.447062+00:00",
-          "start_time": "2023-07-18T20:42:32.103223+00:00"
+          "end_time": "2023-07-18T20:49:44.339960+00:00",
+          "start_time": "2023-07-18T20:49:44.032455+00:00"
         },
         "datalink": {
           "b2ef382d-0457-4d28-a610-e94443bf5384": {
@@ -752,6 +798,52 @@
             },
             "sample_history": [],
             "sampling_time": "2023-07-18T20:42:32.260681",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          },
+          "1fff91c9-1368-4cf7-8b89-13c97e578022": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 84352,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 84352,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "1fff91c9-1368-4cf7-8b89-13c97e578022",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:49:44.157023",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
           }
@@ -804,7 +896,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b9b9e1c8-a8e8-4bae-980e-3ec75ce37433"
+      "last_transaction_id": "8f8e4b94-706a-47b6-a1bb-8ef4e3042c1b"
     }
   },
   "nbformat": 4,
