--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -868,11 +868,85 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "python"
+          "cell_type": "python",
+          "output_collection_id": "1ba90247-b6be-4ffc-a563-0249b05c1a1f"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:51:42.356344+00:00",
+          "start_time": "2023-07-18T20:51:42.197599+00:00"
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "unclean_df['Company Name']=unclean_df['Company Name'].apply(lambda x:x.split(\"\\n\")[0])",
+      "outputs": []
+    },
+    {
+      "id": "ad66cce4-89c8-4ed8-b6e2-28f60900edf0",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "a363b912-efc7-4228-a426-d15214cceb65"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:51:57.794471+00:00",
+          "start_time": "2023-07-18T20:51:57.492127+00:00"
+        },
+        "datalink": {
+          "de97b69f-e2ef-4417-988c-2d29b7f56de5": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 84352,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 84352,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "de97b69f-e2ef-4417-988c-2d29b7f56de5",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:51:57.613534",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df",
       "outputs": []
     }
   ],
@@ -896,7 +970,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "8f8e4b94-706a-47b6-a1bb-8ef4e3042c1b"
+      "last_transaction_id": "d083497a-ca27-4672-8dcd-d2abedc9d16c"
     }
   },
   "nbformat": 4,
