--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -889,6 +889,69 @@
           "cell_type": "markdown"
         }
       }
+    },
+    {
+      "id": "f9564f5c-f454-41c3-8c0a-5b194275484e",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "python",
+          "output_collection_id": "604eb9ca-bd8f-45b8-b583-bafe2f15c7d5"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:07:43.459317+00:00",
+          "start_time": "2023-07-18T21:07:43.268968+00:00"
+        },
+        "datalink": {
+          "8806e994-1e21-41c4-b843-fb15ac437a3e": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 30,
+              "orig_size_bytes": 480,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 30,
+              "truncated_size_bytes": 480,
+              "truncated_string_columns": []
+            },
+            "display_id": "8806e994-1e21-41c4-b843-fb15ac437a3e",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T21:07:43.303070",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_ea0ff9bbea2f4cc6babca025c14c69a3"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df['Salary Estimate'].value_counts()",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -911,7 +974,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "aa43fce2-88f0-45a9-a4d0-005cdf348a1e"
+      "last_transaction_id": "ee4fc5d3-ef60-4d3c-be6a-8b6db0c04f65"
     }
   },
   "nbformat": 4,
