--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -969,6 +969,91 @@
       "execution_count": null,
       "source": "unclean_df['min_salary'] = 0\nunclean_df['max_salary'] = 0\nunclean_df['avg_salary'] = 0\nfor i in range(len(unclean_df)):\n    try:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[1].replace('$', '').replace('K', ''))\n    except:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[1].replace('$', '').replace('K', ''))\n    finally:\n        unclean_df.loc[i, 'Salary Estimate'] = str(unclean_df.loc[i, 'min_salary']) + '-' + str(unclean_df.loc[i, 'max_salary'])\n        unclean_df.loc[i, 'avg_salary'] = np.mean([unclean_df.loc[i, 'min_salary'], unclean_df.loc[i, 'max_salary']])",
       "outputs": []
+    },
+    {
+      "id": "4e35b120-9072-4f7c-9ec6-aeb9b7790263",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "e82664d0-fb47-4e7c-a215-180ac4ead73f"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:16:11.071147+00:00",
+          "start_time": "2023-07-18T21:16:10.811016+00:00"
+        },
+        "datalink": {
+          "e9de32a8-8401-43ea-be26-17007d402087": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 18,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 760,
+              "truncated_num_cols": 18,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 760,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "e9de32a8-8401-43ea-be26-17007d402087",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T21:16:10.910713",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_0eb5a3dab0844ddda5de3eca25a21b77"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df.head()",
+      "outputs": []
+    },
+    {
+      "id": "dda5ec0c-2e2e-4d37-8eee-b316fe6e6c42",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -991,7 +1076,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "fda61929-3f95-418f-a867-f5f9cc4ae617"
+      "last_transaction_id": "fb001b47-5ff0-48af-a3bb-915e9bc62943"
     }
   },
   "nbformat": 4,
