--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1065,6 +1065,75 @@
       "execution_count": null,
       "source": "unclean_df['Job Description'][0].split(\"\\n\\n\")",
       "outputs": []
+    },
+    {
+      "id": "c99bc268-722d-4ef4-89fb-cf8dfe03fffa",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "a6f0c78c-13bc-45ce-93a3-0d3a955ef5d8"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:48:31.196543+00:00",
+          "start_time": "2023-07-18T21:48:30.874575+00:00"
+        },
+        "datalink": {
+          "ecf4e792-63de-4c3a-84c1-f1a74ea088cb": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 18,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 100168,
+              "truncated_num_cols": 18,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 100168,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "ecf4e792-63de-4c3a-84c1-f1a74ea088cb",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T21:48:31.012918",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1087,7 +1156,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "36a9e642-419c-467e-bd7a-23373670c362"
+      "last_transaction_id": "40ad74bf-aa3a-4103-8451-6f197a46809d"
     }
   },
   "nbformat": 4,
